Strings for brazilian portuguese

--- a/src/locales/pt/global.json
+++ b/src/locales/pt/global.json
@@ -1,6 +1,6 @@
 {
-  "save": "Save",
-  "erase": "Erase",
-  "yes": "Yes",
-  "no": "No"
+  "save": "Salvar",
+  "erase": "Apagar",
+  "yes": "Sim",
+  "no": "Não"
 }
