--- a/src/locales/pt/phonebook.json
+++ b/src/locales/pt/phonebook.json
@@ -1,12 +1,12 @@
 {
-  "searchTitle": "Search",
-  "servicenosTitle": "Service Nos",
-  "addnameTitle": "Add name",
-  "eraseTitle": "Erase",
-  "editTitle": "Edit",
-  "assigntoneTitle": "Assign tone",
-  "sendbcardTitle": "Send b’card",
-  "optionsTitle": "Options",
-  "speeddialsTitle": "Speed Dials",
-  "voicetagsTitle": "Voice Tags"
+  "searchTitle": "Pesquisar",
+  "servicenosTitle": "Números de serviço",
+  "addnameTitle": "Adicionar nome",
+  "eraseTitle": "Apagar",
+  "editTitle": "Editar",
+  "assigntoneTitle": "Definir toque",
+  "sendbcardTitle": "Enviar cartão de aniversário",
+  "optionsTitle": "Opções",
+  "speeddialsTitle": "Discagem rápida",
+  "voicetagsTitle": "Tags de voz"
 }
